examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  A VLE-encoded unsigned little-endian 128bit integer.
        ///
        ///  Constant alias for string: `"zenoh/uint128"`.
        ///
        ///  Usually used for types: `uint128_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_uint128", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_uint128();

        /// <summary>
        ///  A VLE-encoded 32bit float. Binary representation uses *IEEE 754-2008* *binary32* .
        ///
        ///  Constant alias for string: `"zenoh/float32"`.
        ///
        ///  Usually used for types: `float`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_float32", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_float32();

        /// <summary>
        ///  A VLE-encoded 64bit float. Binary representation uses *IEEE 754-2008* *binary64*.
        ///
        ///  Constant alias for string: `"zenoh/float64"`.
        ///
        ///  Usually used for types: `double`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_float64", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_float64();

        /// <summary>
        ///  A boolean. `0` is `false`, `1` is `true`. Other values are invalid.
        ///
        ///  Constant alias for string: `"zenoh/bool"`.
        ///
        ///  Usually used for types: `bool`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_bool();

        /// <summary>
        ///  A UTF-8 string.
        ///
        ///  Constant alias for string: `"zenoh/string"`.
        ///
        ///  Usually used for types: `const char*`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_string();

        /// <summary>
        ///  A zenoh error.
        ///
        ///  Constant alias for string: `"zenoh/error"`.
        ///
        ///  Usually used for types: `z_reply_error_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_zenoh_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_zenoh_error();

        /// <summary>
        ///  An application-specific stream of bytes.
        ///
        ///  Constant alias for string: `"application/octet-stream"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_octet_stream", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_octet_stream();

        /// <summary>
        ///  A textual file.
        ///
        ///  Constant alias for string: `"text/plain"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_plain", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_plain();

        /// <summary>
        ///  JSON data intended to be consumed by an application.
        ///
        ///  Constant alias for string: `"application/json"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_json();

        /// <summary>
        ///  JSON data intended to be human readable.
        ///
        ///  Constant alias for string: `"text/json"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_json();

        /// <summary>
        ///  A Common Data Representation (CDR)-encoded data.
        ///
        ///  Constant alias for string: `"application/cdr"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_cdr", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_cdr();

        /// <summary>
        ///  A Concise Binary Object Representation (CBOR)-encoded data.
        ///
        ///  Constant alias for string: `"application/cbor"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_cbor", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_cbor();

        /// <summary>
        ///  YAML data intended to be consumed by an application.
        ///
        ///  Constant alias for string: `"application/yaml"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_yaml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_yaml();

        /// <summary>
        ///  YAML data intended to be human readable.
        ///
        ///  Constant alias for string: `"text/yaml"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_yaml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_yaml();

        /// <summary>
        ///  JSON5 encoded data that are human readable.
        ///
        ///  Constant alias for string: `"text/json5"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_json5", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_json5();

        /// <summary>
        ///  A Python object serialized using [pickle](https://docs.python.org/3/library/pickle.html).
        ///
        ///  Constant alias for string: `"application/python-serialized-object"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_python_serialized_object", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_python_serialized_object();

        /// <summary>
        ///  An application-specific protobuf-encoded data.
        ///
        ///  Constant alias for string: `"application/protobuf"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_protobuf", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_protobuf();

        /// <summary>
        ///  A Java serialized object.
        ///
        ///  Constant alias for string: `"application/java-serialized-object"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_java_serialized_object", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_java_serialized_object();

        /// <summary>
        ///  An [openmetrics](https://github.com/OpenObservability/OpenMetrics) data, common used by [Prometheus](https://prometheus.io/).
        ///
        ///  Constant alias for string: `"application/openmetrics-text"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_openmetrics_text", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_openmetrics_text();

        /// <summary>
        ///  A Portable Network Graphics (PNG) image.
        ///
        ///  Constant alias for string: `"image/png"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_image_png", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_image_png();

        /// <summary>
        ///  A Joint Photographic Experts Group (JPEG) image.
        ///
        ///  Constant alias for string: `"image/jpeg"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_image_jpeg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_image_jpeg();

        /// <summary>
        ///  A Graphics Interchange Format (GIF) image.
        ///
        ///  Constant alias for string: `"image/gif"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_image_gif", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_image_gif();

        /// <summary>
        ///  A BitMap (BMP) image.
        ///
        ///  Constant alias for string: `"image/bmp"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_image_bmp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_image_bmp();

        /// <summary>
        ///  A Web Portable (WebP) image.
        ///
        ///   Constant alias for string: `"image/webp"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_image_webp", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_image_webp();

        /// <summary>
        ///  An XML file intended to be consumed by an application..
        ///
        ///  Constant alias for string: `"application/xml"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_xml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_xml();

        /// <summary>
        ///  An encoded a list of tuples, each consisting of a name and a value.
        ///
        ///  Constant alias for string: `"application/x-www-form-urlencoded"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_x_www_form_urlencoded", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_x_www_form_urlencoded();

        /// <summary>
        ///  An HTML file.
        ///
        ///  Constant alias for string: `"text/html"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_html", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_html();

        /// <summary>
        ///  An XML file that is human readable.
        ///
        ///  Constant alias for string: `"text/xml"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_xml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_xml();

        /// <summary>
        ///  A CSS file.
        ///
        ///  Constant alias for string: `"text/css"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_css", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_css();
